fix: change Capacitée field type from text to number

--- a/src/web/inscription.html
+++ b/src/web/inscription.html
@@ -180,7 +180,7 @@
           <div class="form-group">
             <label for="inputTheme">Capacitée</label>
               <div class="input-group">
-                  <input type="text" class="form-control" id="exampleInputAmount" placeholder="Capacitée">
+                  <input type="number"  min="1" class="form-control" id="exampleInputAmount" placeholder="Capacitée">
                   <div class="input-group-addon"> personnes</div>
             </div>
           </div>
