fix: change Field label

--- a/src/web/inscription.html
+++ b/src/web/inscription.html
@@ -141,8 +141,8 @@
                </table>
             </div>
             <div class="form-group">
-               <label for="input-laboratoire" >Laboratoire</label>
-               <input type="text" name="laboratoire" class="form-control" id="input-laboratoire" placeholder="Laboratoire" required>
+               <label for="input-animateurs" >Animateur(s)</label>
+               <input type="text" name="animateurs" class="form-control" id="input-animateurs" placeholder="Animateur(s)" required>
             </div>
             <div class="form-group">
                <label for="input-adresse" >Adresse</label>
