feat : link create atelier php and html

--- a/src/web/inscription.html
+++ b/src/web/inscription.html
@@ -37,7 +37,7 @@
             <!-- /.container-fluid -->
          </nav>
          <h1 class="col-sm-offset-2 col-sm-8">Inscrire un atelier</h1>
-         <form class="form-horizontal col-sm-offset-2 col-sm-8" action=".php" method="post">
+         <form class="form-horizontal col-sm-offset-2 col-sm-8" action="creationAtelier.php" method="post">
             <div class="form-group">
                <label for="input-titre" >Titre définitif</label>
                <input type="text" name="titre" class="form-control" id="input-titre" placeholder="Titre définitif" required>
