fix : change atelier
reste à récupérer l'id de l'atelier à changer sinon liaison et update db
ok

--- a/src/web/modification.html
+++ b/src/web/modification.html
@@ -37,7 +37,7 @@
             <!-- /.container-fluid -->
          </nav>
          <h1 class="col-sm-offset-2 col-sm-8">Modifier un atelier</h1>
-         <form class="form-horizontal col-sm-offset-2 col-sm-8" action=".php" method="post">
+         <form class="form-horizontal col-sm-offset-2 col-sm-8" action="modifAtelier.php" method="post">
             <div class="form-group">
                <label for="input-titre" >Titre</label>
                <input type="text" name="titre" class="form-control" id="input-titre" placeholder="Titre" value="Titre" required>
@@ -257,7 +257,7 @@
                <input type="text" name="disciplines" class="form-control" id="input-disciplines" placeholder="Disciplines" value="Chimie" required>
             </div>
             <div class="form-group">
-               <button type="submit" class="btn btn-default pull-right">Valider</button>
+               <button type="submit" class="btn btn-default pull-right" >Valider</button>
             </div>
          </form>
       </div>
