test : writing validation over. Adapted to our elements. feat : links on menu.

--- a/src/test/ListerAtelier_initial.html
+++ b/src/test/ListerAtelier_initial.html
@@ -18,27 +18,20 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=liste.html</td>
+	<td>link=liste.php</td>
 	<td></td>
 </tr>
 <!---- Contrôler éléments présents sans atelier.-->
 <tr>
-	<td>verifyTextPresent</td>
+	<td>verifyText</td>
 	<td>//h1</td>
-	<td>Ateliers</td>
+	<td>Liste des atelier</td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>//h1</td>
-	<td>Carte</td>
-</tr>
-<tr>
-	<td>verifyElementPresent</td>
-	<td>//div[@id='carte']</td>
+	<td>verifyText</td>
+	<td>//a[@href='inscription.php']</td>
 	<td></td>
 </tr>
-<!---- Contrôler le contenu de la carte -- /\ à compléter quand je saurais comment on fait ca...-->
-
 </tbody></table>
 </body>
 </html>
