--- a/src/test/creationAtelier.html
+++ b/src/test/creationAtelier.html
@@ -18,17 +18,17 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=liste.html</td>
+	<td>link=liste.php</td>
 	<td></td>
 </tr>
 <tr>
-	<td>AssertElementPresent</td>
-	<td>//a[@href='/CDP_Dev/src/web/inscription.html'][@id='creer-atelier']</td>
-	<td></td>
+	<td>verifyText</td>
+	<td>//a</td>
+	<td>inscrire un atelier</td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>id=creer-atelier</td>
+	<td>click</td>
+	<td>link=Inscrire un atelier</td>
 	<td></td>
 </tr>
 <!---- Creation Atelier - page inscription-->
@@ -104,11 +104,6 @@
 </tr>
 <tr>
 	<td>type</td>
-	<td>name=input-animateur</td>
-	<td>Martin Depardieu (Doctorant), Christophe Coutant (Doctorant)</td>
-</tr>
-<tr>
-	<td>type</td>
 	<td>id=input-resume</td>
 	<td>les fluides complexes ...<br /><br /><br />... propriétés spectaculaires de quelques fluides complexes.</td>
 </tr>
@@ -138,7 +133,7 @@
 	<td></td>
 </tr>
 <tr>
-	<td>typeAndWait</td>
+	<td>type</td>
 	<td>id=input-disciplines</td>
 	<td>Chimie</td>
 </tr>
@@ -149,81 +144,35 @@
 </tr>
 <!---- Contrôle de la création - dans la page Liste-->
 <tr>
-	<td>verifyTextPresent</td>
-	<td>//a[@id='a1-titre']</td>
+	<td>verifyElementPresent</td>
+	<td>//tr[@id='atelier-1']</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyText</td>
+	<td>//tr[@id='atelier-1']/td[1]</td>
 	<td>Liquides durs et solides mou</td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>//p[@id='a1-theme']</td>
-	<td>Découvertes fluides</td>
-</tr>
-<tr>
-	<td>verifyTextPresent</td>
-	<td>//p[@id='a1-type']</td>
+	<td>verifyText</td>
+	<td>//tr[@id='atelier-1']/td[2]</td>
 	<td>scientifique</td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>//ul[@id='a1-a2']</td>
-	<td>Mardi matin</td>
+	<td>verifyText</td>
+	<td>//tr[@id='atelier-1']/td[3]</td>
+	<td>30min</td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>//ul[@id='a1-pm2']</td>
-	<td>Mardi après-midi</td>
+	<td>verifyText</td>
+	<td>//tr[@id='atelier-1']/td[4]</td>
+	<td>12</td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>//ul[@id='a1-a5']</td>
-	<td>Jeudi matin</td>
+	<td>verifyText</td>
+	<td>//tr[@id='atelier-1']/td[5]</td>
+	<td>D</td>
 </tr>
-<tr>
-	<td>verifyTextPresent</td>
-	<td>//ul[@id='a1-pm5']</td>
-	<td>Jeudi après-midi</td>
-</tr>
-<tr>
-	<td>verifyTextPresent</td>
-	<td>//p[@id='a1-laboratoire']</td>
-	<td>Centre de recherche Paul Pascal CNRS</td>
-</tr>
-<tr>
-	<td>verifyPresent</td>
-	<td>//p[@id='a1-adresse']</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyPresent</td>
-	<td>//p[@id='a1-duree']</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyPresent</td>
-	<td>//p[@id='a1-capacitee']</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextPresent</td>
-	<td>//p[@id='a1-animateur']</td>
-	<td>Martin Depardieu (Doctorant), Christophe Coutant (Doctorant)</td>
-</tr>
-<tr>
-	<td>verifyTextPresent</td>
-	<td>//p[@id='a1-resume']</td>
-	<td>les fluides complexes ...<br /><br /><br />... propriétés spectaculaires de quelques fluides complexes.</td>
-</tr>
-<tr>
-	<td>verifyPresent</td>
-	<td>id=a1-pv</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextPresent</td>
-	<td>//p[@id='a1-disciplines']</td>
-	<td>Chimie</td>
-</tr>
-
 </tbody></table>
 </body>
 </html>
