doc : kanban + tracability up-to-day. Only Validate tests waiting. test : littles modifs.

--- a/src/test/ListerAtelier_initial.html
+++ b/src/test/ListerAtelier_initial.html
@@ -28,7 +28,7 @@
 	<td>Liste des atelier</td>
 </tr>
 <tr>
-	<td>verifyText</td>
+	<td>verifyElementPresent</td>
 	<td>//a[@href='inscription.php']</td>
 	<td></td>
 </tr>
