--- a/src/test/creationAtelier.html
+++ b/src/test/creationAtelier.html
@@ -22,9 +22,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>verifyText</td>
-	<td>//a</td>
-	<td>inscrire un atelier</td>
+	<td>assertElementPresent</td>
+	<td>//a[@href='inscription.php']</td>
+	<td>Inscrire un atelier</td>
 </tr>
 <tr>
 	<td>click</td>
@@ -69,7 +69,7 @@
 </tr>
 <tr>
 	<td>type</td>
-	<td>id=input-laboratoire</td>
+	<td>id=input-animateurs</td>
 	<td>Centre de recherche Paul Pascal CNRS</td>
 </tr>
 <tr>
