test : close to end. Only one link to correct.

--- a/src/test/ListerAtelier_initial.html
+++ b/src/test/ListerAtelier_initial.html
@@ -11,6 +11,7 @@
 <thead>
 <tr><td rowspan="1" colspan="3">ListerAtelier_initial</td></tr>
 </thead><tbody>
+<!-- -- WARNING ! You have to clean the 'atelier' table BEFORE using this tests set.-->
 <tr>
 	<td>open</td>
 	<td>/CDP_Dev/src/web/</td>
